crates/test-ui/ui/invalid_option_encode_impl_ref.stderr
error[E0080]: evaluation of `<std::option::Option<MyType> as objc2::RefEncode>::ENCODING_REF` failed
 --> $WORKSPACE/crates/objc2/src/encode.rs
  |
  |             panic!("invalid OptionEncode + RefEncode implementation");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'invalid OptionEncode + RefEncode implementation', $WORKSPACE/crates/objc2/src/encode.rs:284:13
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant used
  --> ui/invalid_option_encode_impl_ref.rs
   |
   |     assert_eq!(<Option<MyType>>::ENCODING_REF, MyType::ENCODING_REF);
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant used
  --> ui/invalid_option_encode_impl_ref.rs
   |
   |     assert_eq!(<Option<MyType>>::ENCODING_REF, MyType::ENCODING_REF);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this note originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)
